--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
