--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "train": "nodemon train.js",
+    "lesson": "nodemon lesson.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abdulaziz Ibrokhimov (Aiden)",
