--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "mongodb": "^3.2.6",
     "node-schedule": "^2.1.1"
   },
   "devDependencies": {
